--- a/index.html
+++ b/index.html
@@ -80,8 +80,127 @@
         </section>
     </header>
     <main>
-        <section class="about-approach">
-            ul.m
+        <section class="about-approach container" aria-labelledby="about-approach-title">
+            <div class="about-approach__top">
+                <div class="about-approach__media-grid">
+                    <div class="about-approach__media-item about-approach__media--label" role="presentation">
+                        <span class="about-approach__label-text">Как мы<br>работаем</span>
+                    </div>
+                    <figure class="about-approach__media-item">
+                        <img
+                                src="./assets/images/about-approach/image_1.png"
+                                alt="Схематичное изображение блокчейна"
+                                class="about-approach__image"
+                                loading="lazy"
+                                width="304"
+                                height="327"
+                        />
+                    </figure>
+                    <figure class="about-approach__media-item about-approach__media--wide">
+                        <img
+                                src="./assets/images/about-approach/image_2.png"
+                                alt="Человек работает за ноутбуком"
+                                class="about-approach__image"
+                                loading="lazy"
+                                width="629"
+                                height="201"
+                        />
+                    </figure>
+                </div>
+
+                <div class="about-approach__content">
+                    <h2 id="about-approach-title" class="about-approach__title">
+                        Как мы работаем<br>и на чем зарабатываем
+                    </h2>
+                    <div class="about-approach__description">
+                        <p>
+                            Команда, у которой за плечами не менее 12 лет работы на разных позициях в сегменте инвестиционного бизнеса —
+                            от аудитора и аналитика отдела рисков до финансового директора инвестиционного банка.
+                        </p>
+                    </div>
+                    <div class="about-approach__description">
+                        <p>
+                            Формируя динамичный инвестиционный портфель, мы ежедневно применяем накопленный опыт в разных направлениях
+                            и делаем упор на стартапы в сферах:
+                        </p>
+                    </div>
+                    <button type="button" class="about-approach__button button button--primary">Регистрация</button>
+                </div>
+            </div>
+
+            <div class="about-approach__cards">
+                <article class="about-approach__card">
+                    <header class="about-approach__header">
+                        <div class="about-approach__card-icon">
+                            <svg width="49" height="45" viewBox="0 0 49 45" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M4.6028 1.33081L12.1668 8.80613L17.1269 3.90428L29.5269 16.1589L35.727 10.0316L48.623 22.7764L45.151 26.2077L35.727 16.8942L29.5269 23.0215L17.1269 10.7669L12.1668 15.6687L1.13078 4.76211L4.6028 1.33081Z" fill="#1565C0"/>
+                                <path d="M5.72205e-05 0.199951H11.3077L5.72205e-05 11.5076V0.199951Z" fill="#1565C0"/>
+                                <path d="M4.90002 16.125H2.38419e-05V44.3H4.90002V16.125Z" fill="#B3E5FC"/>
+                                <path d="M12.25 24.7002H7.35V44.3002H12.25V24.7002Z" fill="#B3E5FC"/>
+                                <path d="M19.6001 18.575H14.7001V44.2999H19.6001V18.575Z" fill="#B3E5FC"/>
+                                <path d="M26.95 25.9248H22.05V44.2998H26.95V25.9248Z" fill="#B3E5FC"/>
+                                <path d="M34.3 29.5999H29.4001V44.2998H34.3V29.5999Z" fill="#B3E5FC"/>
+                                <path d="M41.6499 27.1499H36.7499V44.2999H41.6499V27.1499Z" fill="#B3E5FC"/>
+                                <path d="M49 32.05H44.1V44.3H49V32.05Z" fill="#B3E5FC"/>
+                            </svg>
+                        </div>
+                        <h3 class="about-approach__card-title">
+                            Блокчейн и криптовалюта
+                        </h3>
+                    </header>
+                    <p class="about-approach__card-text">
+                        Сегодня IT-проекты в этой сфере в центре внимания инвесторов всего мира. Но эти технологии интересуют нас не
+                        только сами по себе, мы рассматриваем перспективы их внедрения в e-commerce и в развитие маркетплейсов.
+                    </p>
+                </article>
+
+                <article class="about-approach__card">
+                    <header class="about-approach__header">
+                        <div class="about-approach__card-icon">
+                            <svg width="49" height="45" viewBox="0 0 49 45" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M4.6028 1.33081L12.1668 8.80613L17.1269 3.90428L29.5269 16.1589L35.727 10.0316L48.623 22.7764L45.151 26.2077L35.727 16.8942L29.5269 23.0215L17.1269 10.7669L12.1668 15.6687L1.13078 4.76211L4.6028 1.33081Z" fill="#1565C0"/>
+                                <path d="M5.72205e-05 0.199951H11.3077L5.72205e-05 11.5076V0.199951Z" fill="#1565C0"/>
+                                <path d="M4.90002 16.125H2.38419e-05V44.3H4.90002V16.125Z" fill="#B3E5FC"/>
+                                <path d="M12.25 24.7002H7.35V44.3002H12.25V24.7002Z" fill="#B3E5FC"/>
+                                <path d="M19.6001 18.575H14.7001V44.2999H19.6001V18.575Z" fill="#B3E5FC"/>
+                                <path d="M26.95 25.9248H22.05V44.2998H26.95V25.9248Z" fill="#B3E5FC"/>
+                                <path d="M34.3 29.5999H29.4001V44.2998H34.3V29.5999Z" fill="#B3E5FC"/>
+                                <path d="M41.6499 27.1499H36.7499V44.2999H41.6499V27.1499Z" fill="#B3E5FC"/>
+                                <path d="M49 32.05H44.1V44.3H49V32.05Z" fill="#B3E5FC"/>
+                            </svg>
+                        </div>
+                        <h3 class="about-approach__card-title">
+                            Исскуственный интелект в сфере беттинга
+                        </h3>
+                    </header>
+                    <p class="about-approach__card-text">
+                        Запатентованный инфопродукт собственного производства на основе искусственного интеллекта служит инструментом получения стабильного дохода в сфере беттинга.
+                    </p>
+                </article>
+
+                <article class="about-approach__card">
+                    <header class="about-approach__header">
+                        <div class="about-approach__card-icon">
+                            <svg width="49" height="45" viewBox="0 0 49 45" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M4.6028 1.33081L12.1668 8.80613L17.1269 3.90428L29.5269 16.1589L35.727 10.0316L48.623 22.7764L45.151 26.2077L35.727 16.8942L29.5269 23.0215L17.1269 10.7669L12.1668 15.6687L1.13078 4.76211L4.6028 1.33081Z" fill="#1565C0"/>
+                                <path d="M5.72205e-05 0.199951H11.3077L5.72205e-05 11.5076V0.199951Z" fill="#1565C0"/>
+                                <path d="M4.90002 16.125H2.38419e-05V44.3H4.90002V16.125Z" fill="#B3E5FC"/>
+                                <path d="M12.25 24.7002H7.35V44.3002H12.25V24.7002Z" fill="#B3E5FC"/>
+                                <path d="M19.6001 18.575H14.7001V44.2999H19.6001V18.575Z" fill="#B3E5FC"/>
+                                <path d="M26.95 25.9248H22.05V44.2998H26.95V25.9248Z" fill="#B3E5FC"/>
+                                <path d="M34.3 29.5999H29.4001V44.2998H34.3V29.5999Z" fill="#B3E5FC"/>
+                                <path d="M41.6499 27.1499H36.7499V44.2999H41.6499V27.1499Z" fill="#B3E5FC"/>
+                                <path d="M49 32.05H44.1V44.3H49V32.05Z" fill="#B3E5FC"/>
+                            </svg>
+                        </div>
+                        <h3 class="about-approach__card-title">
+                            Блокчейн и криптавалюта
+                        </h3>
+                    </header>
+                    <p class="about-approach__card-text">
+                        Некоторые инвесторы уже разуверились     в этих сферах, но технология виртуальной реальности «воскресила» эти отрасли и превратила «Old School» в «New Sexy». </p>
+                </article>
+            </div>
         </section>
     </main>
 </body>
