feat: add 4 sections

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/normalize.css">
+    <link rel="stylesheet" href="./styles/fonts.css">
 </head>
 <body>
     <header class="header">
@@ -202,6 +204,279 @@
                 </article>
             </div>
         </section>
+
+        <section class="invest">
+            <div class="invest__image-wrapper">
+                <img src="./assets/images/invest/code-image.jpg" alt="Код" class="invest__image" />
+            </div>
+
+            <div class="invest__content">
+                <div class="invest__intro">
+                    <h2 class="invest__title">
+                        Инвестировать с нами надёжно и выгодно
+                    </h2>
+
+                    <a href="#" class="invest__button button button--primary">
+                        Начать зарабатывать
+                    </a>
+                </div>
+
+                <div class="invest__steps steps">
+                    <ul class="steps__list">
+                        <li class="steps__item">
+                            <div class="steps__number">1</div>
+                            <div class="steps__info">
+                                <h3 class="steps__title">Регистрация на сайте</h3>
+                                <p class="steps__text">
+                                    Пройдите процедуру регистрации на сайте для открытия счёта. Нажмите кнопку «Регистрация» и заполните все необходимые поля
+                                </p>
+                            </div>
+                        </li>
+
+                        <li class="steps__item">
+                            <div class="steps__number">2</div>
+                            <div class="steps__info">
+                                <h3 class="steps__title">Открывайте депозит</h3>
+                                <p class="steps__text">
+                                    Сделайте инвестицию на удобный срок на сумму от 100 рублей и ваши деньги начнут работать на вас                            </p>
+                            </div>
+                        </li>
+
+                        <li class="steps__item">
+                            <div class="steps__number">3</div>
+                            <div class="steps__info">
+                                <h3 class="steps__title">Распоряжайтесь прибылью</h3>
+                                <p class="steps__text">
+                                    По факту окончания периода инвестиции вклад с прибылью будут доступы для вывода или создания нового депозита                            </p>
+                            </div>
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <section class="faq">
+            <div class="faq__container container">
+                <h2 class="faq__title">
+                    Часто задаваемые вопросы
+                </h2>
+
+                <div class="faq__body">
+                    <ul class="faq__list">
+                        <li class="faq__item">
+                            <div class="faq__question" aria-expanded="false">
+                                <div class="faq__question-icon">
+                                    <svg width="24" height="30" viewBox="0 0 24 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M9.48 18.8C9.48 17.92 9.61333 17.1467 9.88 16.48C10.1733 15.7867 10.5333 15.1733 10.96 14.64C11.3867 14.1067 11.84 13.6267 12.32 13.2C12.8267 12.7467 13.2933 12.32 13.72 11.92C14.1467 11.4933 14.4933 11.0667 14.76 10.64C15.0533 10.2133 15.2 9.74667 15.2 9.24C15.2 8.44 14.8667 7.81333 14.2 7.36C13.56 6.90667 12.72 6.68 11.68 6.68C10.6133 6.68 9.64 6.93333 8.76 7.44C7.90667 7.94667 7.21333 8.65333 6.68 9.56L0.72 6.36C1.76 4.57333 3.26667 3.14667 5.24 2.08C7.21333 0.986665 9.66667 0.439998 12.6 0.439998C14.6533 0.439998 16.4667 0.733332 18.04 1.32C19.64 1.88 20.8933 2.72 21.8 3.84C22.7067 4.96 23.16 6.33333 23.16 7.96C23.16 9 23 9.90667 22.68 10.68C22.36 11.4533 21.9467 12.1333 21.44 12.72C20.96 13.3067 20.44 13.8533 19.88 14.36C19.32 14.84 18.7867 15.3067 18.28 15.76C17.8 16.2133 17.4 16.68 17.08 17.16C16.76 17.64 16.6 18.1867 16.6 18.8H9.48ZM13.04 29.36C11.7333 29.36 10.6533 28.9467 9.8 28.12C8.94667 27.2933 8.52 26.3067 8.52 25.16C8.52 23.9867 8.94667 23.0133 9.8 22.24C10.6533 21.44 11.7333 21.04 13.04 21.04C14.4 21.04 15.4933 21.44 16.32 22.24C17.1733 23.0133 17.6 23.9867 17.6 25.16C17.6 26.3067 17.1733 27.2933 16.32 28.12C15.4933 28.9467 14.4 29.36 13.04 29.36Z" fill="#0A51CB"/>
+                                    </svg>
+                                </div>
+                                <span class="faq__question-text">
+                                    Что нужно, чтобы начать работу в future technologies company (ftc)?
+                                </span>
+                                <div class="faq__question-button">
+                                    <svg width="16" height="10" viewBox="0 0 16 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M1 2L8 8L15 2" stroke="#0A51CB" stroke-width="3"/>
+                                    </svg>
+                                </div>
+                            </div>
+                            <div class="faq__answer" hidden>
+                                <p>
+                                    Здесь вы можете разместить подробный ответ на вопрос.
+                                    Например: <br>
+                                    – Зарегистрироваться на платформе; <br>
+                                    – Открыть личный кабинет; <br>
+                                    – Ознакомиться с документацией и т.д.
+                                </p>
+                            </div>
+                        </li>
+
+                        <li class="faq__item">
+                            <div class="faq__question" aria-expanded="false">
+                                <div class="faq__question-icon">
+                                    <svg width="24" height="30" viewBox="0 0 24 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M9.48 18.8C9.48 17.92 9.61333 17.1467 9.88 16.48C10.1733 15.7867 10.5333 15.1733 10.96 14.64C11.3867 14.1067 11.84 13.6267 12.32 13.2C12.8267 12.7467 13.2933 12.32 13.72 11.92C14.1467 11.4933 14.4933 11.0667 14.76 10.64C15.0533 10.2133 15.2 9.74667 15.2 9.24C15.2 8.44 14.8667 7.81333 14.2 7.36C13.56 6.90667 12.72 6.68 11.68 6.68C10.6133 6.68 9.64 6.93333 8.76 7.44C7.90667 7.94667 7.21333 8.65333 6.68 9.56L0.72 6.36C1.76 4.57333 3.26667 3.14667 5.24 2.08C7.21333 0.986665 9.66667 0.439998 12.6 0.439998C14.6533 0.439998 16.4667 0.733332 18.04 1.32C19.64 1.88 20.8933 2.72 21.8 3.84C22.7067 4.96 23.16 6.33333 23.16 7.96C23.16 9 23 9.90667 22.68 10.68C22.36 11.4533 21.9467 12.1333 21.44 12.72C20.96 13.3067 20.44 13.8533 19.88 14.36C19.32 14.84 18.7867 15.3067 18.28 15.76C17.8 16.2133 17.4 16.68 17.08 17.16C16.76 17.64 16.6 18.1867 16.6 18.8H9.48ZM13.04 29.36C11.7333 29.36 10.6533 28.9467 9.8 28.12C8.94667 27.2933 8.52 26.3067 8.52 25.16C8.52 23.9867 8.94667 23.0133 9.8 22.24C10.6533 21.44 11.7333 21.04 13.04 21.04C14.4 21.04 15.4933 21.44 16.32 22.24C17.1733 23.0133 17.6 23.9867 17.6 25.16C17.6 26.3067 17.1733 27.2933 16.32 28.12C15.4933 28.9467 14.4 29.36 13.04 29.36Z" fill="#0A51CB"/>
+                                    </svg>
+                                </div>
+                                <span class="faq__question-text">
+                                    Могу ли я не заработать, инвестируя в future technologies company (ftc)?
+                                </span>
+                                <div class="faq__question-button">
+                                    <svg width="16" height="10" viewBox="0 0 16 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M1 2L8 8L15 2" stroke="#0A51CB" stroke-width="3"/>
+                                    </svg>
+                                </div>
+                            </div>
+                            <div class="faq__answer" hidden>
+                                <p>
+                                    Ответ на вопрос об инвестировании. Например:
+                                    <br>
+                                    – Все инвестиции несут риски; <br>
+                                    – Компания предлагает различные способы минимизации риска и т.п.
+                                </p>
+                            </div>
+                        </li>
+
+                        <li class="faq__item">
+                            <div class="faq__question" aria-expanded="false">
+                                <div class="faq__question-icon">
+                                    <svg width="24" height="30" viewBox="0 0 24 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M9.48 18.8C9.48 17.92 9.61333 17.1467 9.88 16.48C10.1733 15.7867 10.5333 15.1733 10.96 14.64C11.3867 14.1067 11.84 13.6267 12.32 13.2C12.8267 12.7467 13.2933 12.32 13.72 11.92C14.1467 11.4933 14.4933 11.0667 14.76 10.64C15.0533 10.2133 15.2 9.74667 15.2 9.24C15.2 8.44 14.8667 7.81333 14.2 7.36C13.56 6.90667 12.72 6.68 11.68 6.68C10.6133 6.68 9.64 6.93333 8.76 7.44C7.90667 7.94667 7.21333 8.65333 6.68 9.56L0.72 6.36C1.76 4.57333 3.26667 3.14667 5.24 2.08C7.21333 0.986665 9.66667 0.439998 12.6 0.439998C14.6533 0.439998 16.4667 0.733332 18.04 1.32C19.64 1.88 20.8933 2.72 21.8 3.84C22.7067 4.96 23.16 6.33333 23.16 7.96C23.16 9 23 9.90667 22.68 10.68C22.36 11.4533 21.9467 12.1333 21.44 12.72C20.96 13.3067 20.44 13.8533 19.88 14.36C19.32 14.84 18.7867 15.3067 18.28 15.76C17.8 16.2133 17.4 16.68 17.08 17.16C16.76 17.64 16.6 18.1867 16.6 18.8H9.48ZM13.04 29.36C11.7333 29.36 10.6533 28.9467 9.8 28.12C8.94667 27.2933 8.52 26.3067 8.52 25.16C8.52 23.9867 8.94667 23.0133 9.8 22.24C10.6533 21.44 11.7333 21.04 13.04 21.04C14.4 21.04 15.4933 21.44 16.32 22.24C17.1733 23.0133 17.6 23.9867 17.6 25.16C17.6 26.3067 17.1733 27.2933 16.32 28.12C15.4933 28.9467 14.4 29.36 13.04 29.36Z" fill="#0A51CB"/>
+                                    </svg>
+                                </div>
+                                <span class="faq__question-text">
+                                    Какая минимальная и максимальная сумма депозита?
+                                </span>
+                                <div class="faq__question-button">
+                                    <svg width="16" height="10" viewBox="0 0 16 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M1 2L8 8L15 2" stroke="#0A51CB" stroke-width="3"/>
+                                    </svg>
+                                </div>
+                            </div>
+                            <div class="faq__answer" hidden>
+                                <p>
+                                    Минимальный размер депозита — 100 рублей.
+                                    Максимальный депозит — 80 000 000 рублей.
+                                </p>
+                            </div>
+                        </li>
+                    </ul>
+                    <div class="faq__info">
+                        <h3 class="faq__info-title">
+                            Какая минимальная и максимальная сумма депозита?
+                        </h3>
+                        <p class="faq__info-text">
+                            Минимальный размер депозита – 100 рублей.
+                            Максимальный размер депозита – 80 000 000 рублей.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="stats" aria-labelledby="stats-title">
+            <div class="stats__container container">
+                <h2 id="stats-title" class="stats__title">Статистика компании</h2>
+
+                <ul class="stats__list">
+                    <li class="stats__item">
+                        <span class="stats__value">932</span>
+                        <span class="stats__label">Работаем (дней)</span>
+                    </li>
+                    <li class="stats__item">
+                        <span class="stats__value">960696</span>
+                        <span class="stats__label">Всего инвесторов</span>
+                    </li>
+                    <li class="stats__item">
+                        <span class="stats__value">67</span>
+                        <span class="stats__label">Новых за 24 часа</span>
+                    </li>
+                    <li class="stats__item">
+                        <span class="stats__value">109500р</span>
+                        <span class="stats__label">Среднее пополнение</span>
+                    </li>
+                </ul>
+
+                <div class="stats__actions">
+                    <a href="#" class="stats__button button button--primary">Присоединяйтесь к нам</a>
+                    <a href="#" class="stats__button button">Калькулятор прибыли</a>
+                </div>
+            </div>
+        </section>
     </main>
+
+    <div class="footer">
+        <div class="footer__container container">
+
+            <div class="footer__column footer__about">
+                <p>
+                    Команда, у которой за плечами не менее 12 лет работы на разных позициях в сегменте инвестиционного бизнеса —
+                    от аудитора и аналитика отдела рисков до финансового директора инвестиционного банка.
+                </p>
+            </div>
+
+            <div class="footer__column footer__navigation">
+                <h3 class="footer__navigation-title">Навигация</h3>
+                <div class="footer__navigation-body">
+                    <div class="footer__navigation-left">
+                        <ul class="footer__list footer__list">
+                            <li class="footer__item">
+                                <a href="/" class="footer__link">
+                                    Главная
+                                </a>
+                            </li>
+                            <li class="footer__item">
+                                <a href="/" class="footer__link">
+                                    О Компании
+                                </a>
+                            </li>
+                            <li class="footer__item">
+                                <a href="/" class="footer__link">
+                                    Отзывы о компании
+                                </a>
+                            </li>
+                            <li class="footer__item">
+                                <a href="/" class="footer__link">
+                                    Как мы зарабатываем?
+                                </a>
+                            </li>
+                            <li class="footer__item">
+                                <a href="/" class="footer__link">
+                                    Клиентское соглашение
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="footer__navigation-right">
+                        <ul class="footer__list">
+                            <li class="footer__item">
+                                <a href="/" class="footer__link">
+                                    Документы компании
+                                </a>
+                            </li>
+                            <li class="footer__item">
+                                <a href="/" class="footer__link">
+                                    Новости
+                                </a>
+                            </li>
+                            <li class="footer__item">
+                                <a href="/" class="footer__link">
+                                    F.A.Q.
+                                </a>
+                            </li>
+                            <li class="footer__item">
+                                <a href="/" class="footer__link">
+                                    Контакты
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="footer__column footer__contacts">
+                <h3 class="footer__column-title">Контакты</h3>
+                <ul class="footer__list">
+                    <li class="footer__item footer__phone">
+                        <a href="tel:+79991233333" class="footer__link">
+                            +7 (999) 123-33-33
+                        </a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="mailto:info@ftc.vin" class="footer__link"><span class="footer__link-strong">info@ftc.vin</span></a>
+                    </li>
+                    <li class="footer__item">
+                        <span class="footer__link-strong">ПН - ПТ:</span>
+                        10:00 - 20:00 по МСК
+                    </li>
+                    <li class="footer__item">
+                        <span class="footer__link-strong">СБ - ВС:</span>
+                        свободный график
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </body>
+<script src="./scripts/main.js"></script>
 </html>
