refactor: correction of defects

--- a/index.html
+++ b/index.html
@@ -346,8 +346,14 @@
                             Какая минимальная и максимальная сумма депозита?
                         </h3>
                         <p class="faq__info-text">
-                            Минимальный размер депозита – 100 рублей.
-                            Максимальный размер депозита – 80 000 000 рублей.
+                            Минимальный размер депозита –
+                            <span class="text-strong">
+                                100 рублей.
+                            </span>
+                            Максимальный размер депозита –
+                            <span class="text-strong">
+                                80 000 000 рублей.
+                            </span>
                         </p>
                     </div>
                 </div>
@@ -463,14 +469,14 @@
                         </a>
                     </li>
                     <li class="footer__item">
-                        <a href="mailto:info@ftc.vin" class="footer__link"><span class="footer__link-strong">info@ftc.vin</span></a>
+                        <a href="mailto:info@ftc.vin" class="footer__link"><span class="text-strong">info@ftc.vin</span></a>
                     </li>
                     <li class="footer__item">
-                        <span class="footer__link-strong">ПН - ПТ:</span>
+                        <span class="text-strong">ПН - ПТ:</span>
                         10:00 - 20:00 по МСК
                     </li>
                     <li class="footer__item">
-                        <span class="footer__link-strong">СБ - ВС:</span>
+                        <span class="text-strong">СБ - ВС:</span>
                         свободный график
                     </li>
                 </ul>
