--- a/index.html
+++ b/index.html
@@ -210,50 +210,54 @@
                 <img src="./assets/images/invest/code-image.jpg" alt="Код" class="invest__image" />
             </div>
 
-            <div class="invest__content">
-                <div class="invest__intro">
-                    <h2 class="invest__title">
-                        Инвестировать с нами надёжно и выгодно
-                    </h2>
+            <div class="invest__body">
+                <div class="invest__content">
+                    <div class="invest__intro">
+                        <h2 class="invest__title">
+                            Инвестировать с нами надёжно и выгодно
+                        </h2>
 
-                    <a href="#" class="invest__button button button--primary">
-                        Начать зарабатывать
-                    </a>
-                </div>
+                        <a href="#" class="invest__button button button--primary">
+                            Начать зарабатывать
+                        </a>
+                    </div>
 
-                <div class="invest__steps steps">
-                    <ul class="steps__list">
-                        <li class="steps__item">
-                            <div class="steps__number">1</div>
-                            <div class="steps__info">
-                                <h3 class="steps__title">Регистрация на сайте</h3>
-                                <p class="steps__text">
-                                    Пройдите процедуру регистрации на сайте для открытия счёта. Нажмите кнопку «Регистрация» и заполните все необходимые поля
-                                </p>
-                            </div>
-                        </li>
+                    <div class="invest__steps steps">
+                        <ul class="steps__list">
+                            <li class="steps__item">
+                                <div class="steps__number">1</div>
+                                <div class="steps__info">
+                                    <h3 class="steps__title">Регистрация на сайте</h3>
+                                    <p class="steps__text">
+                                        Пройдите процедуру регистрации на сайте для открытия счёта. Нажмите кнопку «Регистрация» и заполните все необходимые поля
+                                    </p>
+                                </div>
+                            </li>
 
-                        <li class="steps__item">
-                            <div class="steps__number">2</div>
-                            <div class="steps__info">
-                                <h3 class="steps__title">Открывайте депозит</h3>
-                                <p class="steps__text">
-                                    Сделайте инвестицию на удобный срок на сумму от 100 рублей и ваши деньги начнут работать на вас                            </p>
-                            </div>
-                        </li>
+                            <li class="steps__item">
+                                <div class="steps__number">2</div>
+                                <div class="steps__info">
+                                    <h3 class="steps__title">Открывайте депозит</h3>
+                                    <p class="steps__text">
+                                        Сделайте инвестицию на удобный срок на сумму от 100 рублей и ваши деньги начнут работать на вас                            </p>
+                                </div>
+                            </li>
 
-                        <li class="steps__item">
-                            <div class="steps__number">3</div>
-                            <div class="steps__info">
-                                <h3 class="steps__title">Распоряжайтесь прибылью</h3>
-                                <p class="steps__text">
-                                    По факту окончания периода инвестиции вклад с прибылью будут доступы для вывода или создания нового депозита                            </p>
-                            </div>
-                        </li>
+                            <li class="steps__item">
+                                <div class="steps__number">3</div>
+                                <div class="steps__info">
+                                    <h3 class="steps__title">Распоряжайтесь прибылью</h3>
+                                    <p class="steps__text">
+                                        По факту окончания периода инвестиции вклад с прибылью будут доступы для вывода или создания нового депозита                            </p>
+                                </div>
+                            </li>
 
-                    </ul>
+                        </ul>
+                    </div>
                 </div>
             </div>
+
+
         </section>
 
         <section class="faq">
