refactor: css structure

--- a/index.html
+++ b/index.html
@@ -6,15 +6,13 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="./styles/style.css">
-    <link rel="stylesheet" href="./styles/normalize.css">
-    <link rel="stylesheet" href="./styles/fonts.css">
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
     <header class="header">
         <a href="/" class="header__aside aside">
             <div class="aside__text">
-                Начать<br>зарабатывать
+                Начать зарабатывать
             </div>
             <div class="aside__arrow">
                 <svg width="62" height="38" viewBox="0 0 62 38" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -23,7 +21,7 @@
             </div>
         </a>
         <section class="hero">
-            <header class="header-actions">
+            <div class="header-actions">
                 <nav class="header-menu">
                     <ul class="header-menu-list">
                         <li class="header-menu-item">
@@ -61,7 +59,7 @@
                 <a href="/" class="header-button">
                     Вход/Регистрация
                 </a>
-            </header>
+            </div>
             <div class="hero__body">
                 <h1 class="hero__title">
                     Сегодня рынок IT-технологий измеряется уже триллионами долларов
@@ -86,7 +84,7 @@
             <div class="about-approach__top">
                 <div class="about-approach__media-grid">
                     <div class="about-approach__media-item about-approach__media--label" role="presentation">
-                        <span class="about-approach__label-text">Как мы<br>работаем</span>
+                        <span class="about-approach__label-text">Как мы работаем</span>
                     </div>
                     <figure class="about-approach__media-item">
                         <img
@@ -112,7 +110,7 @@
 
                 <div class="about-approach__content">
                     <h2 id="about-approach-title" class="about-approach__title">
-                        Как мы работаем<br>и на чем зарабатываем
+                        Как мы работаем и на чем зарабатываем
                     </h2>
                     <div class="about-approach__description">
                         <p>
@@ -257,7 +255,6 @@
                 </div>
             </div>
 
-
         </section>
 
         <section class="faq">
@@ -269,7 +266,7 @@
                 <div class="faq__body">
                     <ul class="faq__list">
                         <li class="faq__item">
-                            <div class="faq__question" aria-expanded="false">
+                            <div class="faq__question" aria-expanded="false" role="button">
                                 <div class="faq__question-icon">
                                     <svg width="24" height="30" viewBox="0 0 24 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M9.48 18.8C9.48 17.92 9.61333 17.1467 9.88 16.48C10.1733 15.7867 10.5333 15.1733 10.96 14.64C11.3867 14.1067 11.84 13.6267 12.32 13.2C12.8267 12.7467 13.2933 12.32 13.72 11.92C14.1467 11.4933 14.4933 11.0667 14.76 10.64C15.0533 10.2133 15.2 9.74667 15.2 9.24C15.2 8.44 14.8667 7.81333 14.2 7.36C13.56 6.90667 12.72 6.68 11.68 6.68C10.6133 6.68 9.64 6.93333 8.76 7.44C7.90667 7.94667 7.21333 8.65333 6.68 9.56L0.72 6.36C1.76 4.57333 3.26667 3.14667 5.24 2.08C7.21333 0.986665 9.66667 0.439998 12.6 0.439998C14.6533 0.439998 16.4667 0.733332 18.04 1.32C19.64 1.88 20.8933 2.72 21.8 3.84C22.7067 4.96 23.16 6.33333 23.16 7.96C23.16 9 23 9.90667 22.68 10.68C22.36 11.4533 21.9467 12.1333 21.44 12.72C20.96 13.3067 20.44 13.8533 19.88 14.36C19.32 14.84 18.7867 15.3067 18.28 15.76C17.8 16.2133 17.4 16.68 17.08 17.16C16.76 17.64 16.6 18.1867 16.6 18.8H9.48ZM13.04 29.36C11.7333 29.36 10.6533 28.9467 9.8 28.12C8.94667 27.2933 8.52 26.3067 8.52 25.16C8.52 23.9867 8.94667 23.0133 9.8 22.24C10.6533 21.44 11.7333 21.04 13.04 21.04C14.4 21.04 15.4933 21.44 16.32 22.24C17.1733 23.0133 17.6 23.9867 17.6 25.16C17.6 26.3067 17.1733 27.2933 16.32 28.12C15.4933 28.9467 14.4 29.36 13.04 29.36Z" fill="#0A51CB"/>
@@ -284,19 +281,10 @@
                                     </svg>
                                 </div>
                             </div>
-                            <div class="faq__answer" hidden>
-                                <p>
-                                    Здесь вы можете разместить подробный ответ на вопрос.
-                                    Например: <br>
-                                    – Зарегистрироваться на платформе; <br>
-                                    – Открыть личный кабинет; <br>
-                                    – Ознакомиться с документацией и т.д.
-                                </p>
-                            </div>
                         </li>
 
                         <li class="faq__item">
-                            <div class="faq__question" aria-expanded="false">
+                            <div class="faq__question" aria-expanded="false" role="button">
                                 <div class="faq__question-icon">
                                     <svg width="24" height="30" viewBox="0 0 24 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M9.48 18.8C9.48 17.92 9.61333 17.1467 9.88 16.48C10.1733 15.7867 10.5333 15.1733 10.96 14.64C11.3867 14.1067 11.84 13.6267 12.32 13.2C12.8267 12.7467 13.2933 12.32 13.72 11.92C14.1467 11.4933 14.4933 11.0667 14.76 10.64C15.0533 10.2133 15.2 9.74667 15.2 9.24C15.2 8.44 14.8667 7.81333 14.2 7.36C13.56 6.90667 12.72 6.68 11.68 6.68C10.6133 6.68 9.64 6.93333 8.76 7.44C7.90667 7.94667 7.21333 8.65333 6.68 9.56L0.72 6.36C1.76 4.57333 3.26667 3.14667 5.24 2.08C7.21333 0.986665 9.66667 0.439998 12.6 0.439998C14.6533 0.439998 16.4667 0.733332 18.04 1.32C19.64 1.88 20.8933 2.72 21.8 3.84C22.7067 4.96 23.16 6.33333 23.16 7.96C23.16 9 23 9.90667 22.68 10.68C22.36 11.4533 21.9467 12.1333 21.44 12.72C20.96 13.3067 20.44 13.8533 19.88 14.36C19.32 14.84 18.7867 15.3067 18.28 15.76C17.8 16.2133 17.4 16.68 17.08 17.16C16.76 17.64 16.6 18.1867 16.6 18.8H9.48ZM13.04 29.36C11.7333 29.36 10.6533 28.9467 9.8 28.12C8.94667 27.2933 8.52 26.3067 8.52 25.16C8.52 23.9867 8.94667 23.0133 9.8 22.24C10.6533 21.44 11.7333 21.04 13.04 21.04C14.4 21.04 15.4933 21.44 16.32 22.24C17.1733 23.0133 17.6 23.9867 17.6 25.16C17.6 26.3067 17.1733 27.2933 16.32 28.12C15.4933 28.9467 14.4 29.36 13.04 29.36Z" fill="#0A51CB"/>
@@ -311,18 +299,10 @@
                                     </svg>
                                 </div>
                             </div>
-                            <div class="faq__answer" hidden>
-                                <p>
-                                    Ответ на вопрос об инвестировании. Например:
-                                    <br>
-                                    – Все инвестиции несут риски; <br>
-                                    – Компания предлагает различные способы минимизации риска и т.п.
-                                </p>
-                            </div>
                         </li>
 
                         <li class="faq__item">
-                            <div class="faq__question" aria-expanded="false">
+                            <div class="faq__question" aria-expanded="false" role="button">
                                 <div class="faq__question-icon">
                                     <svg width="24" height="30" viewBox="0 0 24 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M9.48 18.8C9.48 17.92 9.61333 17.1467 9.88 16.48C10.1733 15.7867 10.5333 15.1733 10.96 14.64C11.3867 14.1067 11.84 13.6267 12.32 13.2C12.8267 12.7467 13.2933 12.32 13.72 11.92C14.1467 11.4933 14.4933 11.0667 14.76 10.64C15.0533 10.2133 15.2 9.74667 15.2 9.24C15.2 8.44 14.8667 7.81333 14.2 7.36C13.56 6.90667 12.72 6.68 11.68 6.68C10.6133 6.68 9.64 6.93333 8.76 7.44C7.90667 7.94667 7.21333 8.65333 6.68 9.56L0.72 6.36C1.76 4.57333 3.26667 3.14667 5.24 2.08C7.21333 0.986665 9.66667 0.439998 12.6 0.439998C14.6533 0.439998 16.4667 0.733332 18.04 1.32C19.64 1.88 20.8933 2.72 21.8 3.84C22.7067 4.96 23.16 6.33333 23.16 7.96C23.16 9 23 9.90667 22.68 10.68C22.36 11.4533 21.9467 12.1333 21.44 12.72C20.96 13.3067 20.44 13.8533 19.88 14.36C19.32 14.84 18.7867 15.3067 18.28 15.76C17.8 16.2133 17.4 16.68 17.08 17.16C16.76 17.64 16.6 18.1867 16.6 18.8H9.48ZM13.04 29.36C11.7333 29.36 10.6533 28.9467 9.8 28.12C8.94667 27.2933 8.52 26.3067 8.52 25.16C8.52 23.9867 8.94667 23.0133 9.8 22.24C10.6533 21.44 11.7333 21.04 13.04 21.04C14.4 21.04 15.4933 21.44 16.32 22.24C17.1733 23.0133 17.6 23.9867 17.6 25.16C17.6 26.3067 17.1733 27.2933 16.32 28.12C15.4933 28.9467 14.4 29.36 13.04 29.36Z" fill="#0A51CB"/>
@@ -336,12 +316,6 @@
                                         <path d="M1 2L8 8L15 2" stroke="#0A51CB" stroke-width="3"/>
                                     </svg>
                                 </div>
-                            </div>
-                            <div class="faq__answer" hidden>
-                                <p>
-                                    Минимальный размер депозита — 100 рублей.
-                                    Максимальный депозит — 80 000 000 рублей.
-                                </p>
                             </div>
                         </li>
                     </ul>
@@ -395,7 +369,7 @@
         </section>
     </main>
 
-    <div class="footer">
+    <footer class="footer">
         <div class="footer__container container">
 
             <div class="footer__column footer__about">
@@ -486,7 +460,6 @@
                 </ul>
             </div>
         </div>
-    </div>
+    </footer>
 </body>
-<script src="./scripts/main.js"></script>
 </html>
